[tool.poetry]
name = "qcodes-measurements"
version = "0.1.0"
description = "QNL qcodes measurement procedures"
authors = ["Sebastian Pauka <spauka@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
matplotlib = ">3.10.0"
pyqtgraph = ">0.13.7"
qcodes = ">0.50.1"
numpy = ">2.2.1"
tabulate = ">=0.9.0"
tqdm = ">4.67.1"
requests = ">2.32.4"
pyside6 = ">6.8.1.1"
scipy = ">1.15.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
