[project]
name = "qcodes-measurements"
version = "0.1.0"
description = "QNL qcodes measurement procedures"
authors = [
    {name = "Sebastian Pauka", email = "spauka@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "matplotlib>=3.10",
    "pyqtgraph>=0.14",
    "qcodes>0.50",
    "numpy>2.2",
    "scipy>1.17",
    "tabulate>=0.9",
    "tqdm>4.67",
    "requests>=2.32",
    "pyside6>6.8",
    "qt-py>=2.0.3",
]

[dependency-groups]
dev = [
    "ty>=0.0.18",
    "pylint>=4.0.0",
]
